Project Java version changed to '1.8' Implemented publishing mechanics.